# icu4x

./: .gitignore  .rubocop.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Gemfile  README.md  Rakefile  Steepfile  icu4x.gemspec  mise.toml
.github/workflows/: README.md  ci.yml  claude.yml  release-preparation.yml  release-publish.yml  release-validation.yml  update-ruby-versions.yml
doc/: collator.md  data.md  datetime.md  datetime_format.md  display_names.md  duration_format.md  intl_compatibility.md  list.md  list_format.md  locale.md  number.md  number_format.md  plural_rules.md  plurals.md  relative_time_format.md  segmenter.md
doc/design/: icu4x_ruby_design.md
ext/icu4x/: Cargo.toml  extconf.rb
ext/icu4x/src/: collator.rs  data_generator.rs  data_provider.rs  datetime_format.rs  display_names.rs  duration_format.rs  helpers.rs  lib.rs  list_format.rs  locale.rs  locale_fallback_provider.rs  number_format.rs  parts_collector.rs  plural_rules.rs  relative_time_format.rs  segmenter.rs
ext/icu4x_macros/: Cargo.toml
lib/: icu4x.rb
lib/icu4x/: data_gem_task.rb  rake_task.rb  version.rb  yard_docs.rb
sig/: dry-configurable.rbs  icu4x.rbs
spec/: icu4x_spec.rb  spec_helper.rb
spec/icu4x/: collator_spec.rb  data_gem_task_spec.rb  data_generator_spec.rb  data_provider_spec.rb  datetime_format_spec.rb  display_names_spec.rb  duration_format_spec.rb  formatted_part_spec.rb  list_format_spec.rb  locale_fallback_provider_spec.rb  locale_spec.rb  number_format_spec.rb  plural_rules_spec.rb  rake_task_spec.rb  relative_time_format_spec.rb  (+1 more)
(+10 files in other folders)
