[package]
name = "icu4x"
version = "0.9.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
writeable = "0.6"
icu_locale = "2.2"
icu_provider = "2.2"
icu_provider_blob = { version = "2.2", features = ["alloc", "export"] }
icu_provider_source = { version = "2.2", features = ["networking", "unstable"] }
icu_provider_export = "2.2"
icu_provider_registry = "2.2"
icu_provider_adapters = "2.2"
icu = { version = "2.2", features = ["unstable"] }
fixed_decimal = "0.7"
tinystr = "0.8"
jiff = "0.2"
icu4x_macros = { path = "../icu4x_macros" }
